[tool.poetry]
name = "safe-ds-runner"
version = "0.14.1"
description = "Execute Safe-DS programs that were compiled to Python."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/Runner"
documentation = "https://safe-ds-runner.readthedocs.io"
keywords = ["data-science", "machine-learning", "usability", "learnability"]
packages = [
    { include = "safeds_runner", from = "src" },
]

[tool.poetry.scripts]
safe-ds-runner = "safeds_runner.main:main"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
psutil = "^5.9.8"
pydantic = "^2.7.0"
python-socketio = "^5.11.2"
safe-ds = ">=0.22.1,<0.23"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
python-socketio = {extras = ["asyncio-client"], version = "^5.11.2"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-glightbox = "^0.3.4"
mkdocs-material = "^9.1.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
