[tool.poetry]
name = "safe-ds-runner"
version = "0.18.0"
description = "Execute Safe-DS programs that were compiled to Python."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/Runner"
documentation = "https://safe-ds-runner.readthedocs.io"
keywords = ["data-science", "machine-learning", "usability", "learnability"]
packages = [
    { include = "safeds_runner", from = "src" },
]

[tool.poetry.scripts]
safe-ds-runner = "safeds_runner.main:main"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
safe-ds = ">=0.28.0,<0.29.0"
hypercorn = ">=0.16,<0.18"
psutil = ">=5.9.8,<7.0.0"
pydantic = "^2.9.2"
quart = "^0.19.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
pytest-asyncio = "^0.24.0"
simple-websocket = "^1.0.0"
torch = [
    # Install the CUDA version on Windows. Projects that depend on us always get their dependencies from PyPI, so
    # there's no point moving this to the main dependencies section.
    { version = "^2.4.1", markers="sys_platform == 'win32'", source = "torch_cuda" },
    { version = "^2.4.1", markers="sys_platform != 'win32'", source = "pypi" },
]
torchvision = [
    # Install the CUDA version on Windows. Projects that depend on us always get their dependencies from PyPI, so
    # there's no point moving this to the main dependencies section.
    { version = "^0.19.1", markers="sys_platform == 'win32'", source = "torch_cuda" },
    { version = "^0.19.1", markers="sys_platform != 'win32'", source = "pypi" },
]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-glightbox = ">=0.3.4,<0.5.0"
mkdocs-material = "^9.1.17"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--tb=short"
